--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.10.0",
   "devDependencies": {
+    "@types/node": "24.0.3",
     "ts-standard": "12.0.2",
     "typescript": "5.8.3"
   }
